--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.5.2",
     "bulma": "^0.5.1",
     "contentful": "^4.6.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.11",
+    "react-transition-group": "^2.2.0",
+    "trianglify": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
